--- a/Jeu/css/scrumble.css
+++ b/Jeu/css/scrumble.css
@@ -1,11 +1,12 @@
 body {
   background-color: #2B2D31;
-  /* background-image: url("../../img/Scrumble_plateau.png"); */
+  /* background-image: url("../img/Scrumble_plateau.png"); 
+  background-size: unset ;  */
   color: white;
   font-family: 'Raleway';
-  font-size: 22px;
+  /* font-size: 22px; */
 }
-
+section{margin-top: 2%;}
 
 footer {
   position: fixed;
@@ -15,38 +16,38 @@ footer {
   background-color: #62797F;
   color: white;
   text-align: left;
-  font-size: small;
+  /* font-size: 2em; */
   margin-top: 5%;
 }
 
 .cercle {
-  width: 40px;
-  height: 40px;
-  border-radius: 20px;
+  width: 1.4em;
+  height: 1.4em;
+  border-radius: 0.8em;
   background:#A9FF00;
   margin-left: 0;
   margin-right: 3%;
 }
 
-
 .cadre {
   background-color: #475158;
-  width: 40%;
-  height: 29em;
-  margin-top: 1.5%;
-  margin-left: 25%;
-  border-radius: 5%;
+  width: 57%;
+  height: 45em;
+  margin-top: -2%;
+  margin-left: 20%;
+  border-radius: 25px;
 }
 
 section>h1 {
   text-align: center;
+  font-size: 2em;
 }
 
 section>h2 {
   text-align: center;
+  font-size:1.3em
 
 }
-
 div>h1 {
   text-align: center;
   font-size: 2em;
@@ -54,17 +55,18 @@ div>h1 {
   padding-top: 2%;
   margin-bottom: 7.5%;
 }
-
 form>div {
   display: flex;
   flex-direction: row;
-  margin-right: 25%;
+  margin-right: 15%;
+  margin-left: -25%;
+  width: 75%;
 }
 
 input[type=number],
 input[type=password],
 input[type=text] {
-  width: 60%;
+  width: 55%;
   padding: 12px 20px;
   margin-left: 20%;
   margin-top: 5%;
@@ -72,19 +74,21 @@ input[type=text] {
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
+  margin-bottom: 2%;
 }
 
 select {
-  width: 75%;
+  width: 74%;
   padding: 16px 20px;
   border: none;
   border-radius: 4px;
   background-color: white;
-  margin-right: 2%;
+  margin-right: 20%;
+  margin-top: 25%;
 }
 
 input[type=submit] {
-  width: 50%;
+  width: 33%;
   background-color: #4CAF50;
   color: white;
   padding: 14px 20px;
@@ -109,23 +113,24 @@ input[type=reset] {
 
 form>div {
   margin-left: 20%;
-  margin-top: 5%
+  margin-top: 1%
 }
 
 .cadreregles {
   border: none;
   overflow-y: scroll;
-  width: 66%;
-  height: 20em;
+  width: 90%;
+  height: 27em;
   background-color: transparent;
-  margin-left: 20%;
-  margin-bottom: 20%;
+  margin-left: 2%;
+  margin-bottom: 2%;
+  margin-top: 0%;
 
 }
 
 ::-webkit-scrollbar {
-  width: 12px;
-  height: 12px;
+  width: 1em;
+  height:10em;
   margin-right: 1%;
 }
 
@@ -142,9 +147,9 @@ form>div {
 
 .rep {
   width: 97%;
-  height: 15em;
+  height: 12em;
   border: 5px solid black;
-  margin-bottom: 10%;
+  margin-bottom: 2%;
   display: flex;
   flex-direction: row;
   background-color: #313439;
@@ -173,6 +178,7 @@ section>h2 {
 }
 
 .boutton {
+  margin-top: -2%;
   margin-left: 70%;
   background-color: #202525;
   border-radius: 12px;
@@ -181,8 +187,8 @@ section>h2 {
 }
 
 .trait {
-  width: 1%;
-  height: 29em;
+  width: 0.5%;
+  height: 35em;
   background-color: black;
   margin-right: 3%;
   margin-left: 3%;
@@ -207,11 +213,10 @@ div>p {
   
 }
 .rectangleB {
-  height: 2em;
-  width: 10em;
- 
+  height: 2.5em;
+  width: 6em;
   background-color: black;
-  margin-left: 2%;
+  margin-left: 7.5%;
   margin-top:5% ;
 }
 
@@ -219,6 +224,7 @@ div>p {
   margin-top:10%;
   width: 2.5em;
   color: white;
+  font-weight: bolder;
 }
 
 #container {
@@ -236,13 +242,13 @@ div>p {
 }
 
 .case {
-  width: 15em;
+  width:80%;
   height: 2em;
   text-align: center;
   background-color: black;
-  margin-top:5%;
-  padding-top: 2%;
+  margin-top: 5%;
   margin-left: 5%;
+  padding-top: 5%;
 
 }
 
@@ -254,10 +260,10 @@ div>p {
   top: 15%;
   width: auto;
   padding: 16px;
-  margin-top: -25px;
+  margin-top:2%;
   color: white;
   font-weight: bold;
-  font-size: 5em;
+  font-size: 2em;
   border-radius: 0 3px 3px 0;
   user-select: none;
   -webkit-user-select: none;
