--- a/JeuMVC Structure/assets/css/etape2Jeu.css
+++ b/JeuMVC Structure/assets/css/etape2Jeu.css
@@ -4,47 +4,57 @@
 }
 
 .titreCard {
-    font-size: 1.5em;
+    font-size: 1.3em;
     color: black;
 }
 
 .texteCard {
-    font-size: 0, 25em;
+    font-size: 0, 3em;
     color: black;
 }
 
-.wrapper {
-    height: 22em;
-    width: 25em;
-    position: absolute;
-    overflow: hidden;
-    margin-left: 10%;
+article{border: none;}
+#fleche{
+    /* position :absolute; */
+    z-index:1;
+    margin-left:0%;
+    color:#202525;
 }
-
-.button-wrapper {
-    width: 98.5%;
-    height: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: relative;
+ 
+#fleche:nth-of-type(2){
+    left:87%;
+    width: 1em;
+    text-align: center;
+    color:#202525;
+    
 }
+.sectionspecial{
 
-.carousel {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    width: 100%;
-    display: flex;
-    position: absolute;
-    left: 0;
-    transition: all 1s ease;
+ width: 98%;
+ height:17em;
+ background-color:transparent;
+ margin-top: 0%;
+ margin: 5%;
+ display:flex;
+ justify-content: left; 
+ overflow-y: hidden;
+overflow-x: hidden 
+
 }
-
-.card {
-    background: black;
-    min-width: 200px;
-    height: 50em;
-    margin-right: 1rem;
-    display: inline-block;
+.sectionspecial::-webkit-scrollbar{
+    visibility: hidden;
+}
+div{
+    min-width:13.67em;
+    /* height:98%; */
+    position:relative;
+    left:0;
+    text-align: center;
+     padding-top: 0.5%;  
+    font-size: medium;
+    font-weight: bold;
+    color:white;
+    margin-left: 2%;
+    transition:  0.5s;
+    background-color: #FAF5BC;
 }
