--- a/JeuMVC Structure/assets/css/scrumble.css
+++ b/JeuMVC Structure/assets/css/scrumble.css
@@ -103,7 +103,7 @@ article {
   display: flex;
   flex-direction: row;
   width: 85%;
-  margin-top: 5%;
+  margin-top: 0%;
   margin-left: 10%;
   margin-right: 5%;
   border: 1px solid black;
@@ -117,7 +117,7 @@ div>h1 {
   margin-bottom: 7.5%;
 }
 h3 {
-  margin-top: 10%;
+  margin-top: 2%;
   font-size: 0.9em;
   margin-left: 5%;
 }
@@ -346,11 +346,12 @@ div>p {
 }
 
 /* Next & previous buttons */
+
 .prev,
 .next {
   cursor: pointer;
   position: absolute;
-  top: 15%;
+  top: 45%;
   width: auto;
   padding: 16px;
   margin-top: 2%;
@@ -371,4 +372,5 @@ div>p {
 
 .cadrespecial {
   background-color: #475158;
+  height:32em;
 }
