commit aprés réalisation du slider+cadre2

--- a/JeuMVC Structure/assets/css/scrumble.css
+++ b/JeuMVC Structure/assets/css/scrumble.css
@@ -327,7 +327,7 @@ div>p {
 
 .box {
   width: 16em;
-  height: 15em;
+  /* height: 15em; */
   background-color: #FAF5BC;
   margin-left: 1%;
   margin-right: 3%;
