--- a/JeuMVC Structure/assets/css/etape2Jeu.css
+++ b/JeuMVC Structure/assets/css/etape2Jeu.css
@@ -14,49 +14,54 @@
 }
 
 article{border: none;}
-#fleche{
-    /* position :absolute; */
-    z-index:1;
-    margin-left:0%;
+
+article>div>div>.fleche{
+    margin:0  ;
+    /* border: red 1px solid; */
+}
+.fleche {
+    position: absolute;
+    z-index: 1;
+    width: 200px;
+    top:25%;
     color:#202525;
 }
- 
-#fleche:nth-of-type(2){
-    left:87%;
-    width: 1em;
-    text-align: center;
-    color:#202525;
-    
-}
-.sectionspecial{
 
- width: 98%;
- height:17em;
- background-color:transparent;
- margin-top: 0%;
- margin: 5%;
- display:flex;
- justify-content: left; 
- overflow-y: hidden;
-overflow-x: hidden 
-
+.fleche:nth-of-type(2) {
+    left: 89.5%;
+    width: calc(100%-200px);
+    text-align: center; 
 }
-.sectionspecial::-webkit-scrollbar{
+
+.elementspecial{
+
+    width: 98%;
+    height: 25em;
+    background-color: transparent;
+    margin-top: 0%;
+    display: flex;
+    justify-content: left;
+    overflow-y: hidden;
+    overflow-x: hidden
+}
+
+.elementspecial::-webkit-scrollbar {
     visibility: hidden;
 }
-div{
-    min-width:13.67em;
+
+div {
+    min-width: 13.67em;
     /* height:98%; */
-    position:relative;
-    left:0;
+    position: relative;
+    left: 0;
     text-align: center;
-     padding-top: 0.5%;  
+    padding-top: 0.5%;
     font-size: medium;
     font-weight: bold;
-    color:white;
+    color: white;
     margin-left: 2%;
-    transition:  0.5s;
-    background-color: #FAF5BC;
+    transition: 0.5s;
+    background-color:transparent
 }
 #fleche2{
     top: 100%;color:#202525;
