--- a/JeuMVC Structure/assets/css/footer.css
+++ b/JeuMVC Structure/assets/css/footer.css
@@ -1,4 +1,4 @@
-.para1 {
+/* .para1 {
     margin-right: 1%;
     margin-left: 7%;
     color: white;
@@ -9,6 +9,53 @@
     margin-left: 34%;
     margin-right: 1%;
     color: white;
-    font-size: 0.9em;
+    font-size: 0.9em;}*/ 
+/* --------------------------------------------------------- */
 
+footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    font-size: 0.3em;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100vw;
+    background-color: #62797F;
+    color: white;
+    height: 13em;}
+
+.cercle {
+    width: 20px;
+    height: 20px;
+    border-radius: 10px;
+    background: #A9FF00;
 }
+
+.divfooter {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    font-size: 3em;
+    width: 100%;
+    margin: 0;
+}
+
+#divcas2 {
+    display: flex;
+    justify-content: flex-end;
+}
+
+#divcas1 {
+    
+    display: flex;
+    justify-content: flex-start;
+}
+
+.divfooter>p {
+    margin-left: 10%;
+    margin-right: 5%;
+}
+
+
+
