essi sur sur systeme de réorganisation des userstories pb interact.js ne se charge même avec npm et surtout ne focntionne pas en dynamique (si fecht alors pb)

--- a/JeuMVC Structure/assets/css/etape3.css
+++ b/JeuMVC Structure/assets/css/etape3.css
@@ -4,7 +4,8 @@ padding-top:0%;
 /* .span4{
     padding-top: 5%;
 } */
-h3, p{ color:black;}
+h3{ color:black;}
+.forme>p{ color:black;}
 .span1{padding-top: 0%;}
 .span3{
     padding-top:10em;
@@ -16,4 +17,7 @@ h3, p{ color:black;}
     padding-top: 66%;
     height: 100%;
     vertical-align: middle;
+}
+.position{
+    position: absolute;
 }
