--- a/JeuMVC Structure/assets/css/scrumble.css
+++ b/JeuMVC Structure/assets/css/scrumble.css
@@ -311,12 +311,12 @@ div>p {
 
 .rectangleB {
   height: 2.5em;
-  width: 24em;
+  width: 20em;
   background-color: black;
-  margin-left: 4%;
+  margin-left: 5%;
   text-align: center;
   padding-top: 2%;
-  margin-right: 1%;
+  margin-right:4%;
 
 }
 
@@ -446,12 +446,16 @@ li>.rep {
 }
 
 .forme {
-  margin-top: 1%;
-  margin-left: 1.0%;
-  margin-right: 2.6%;
-  width: 10.5em;
-  height: 17%;
+  margin:0%;
+  width: 12em;
+  height: 19%;
   background-color: #FAF5BC;
+  padding: 5px;
+  border: none;
+  box-shadow: none;
+}
+.content{
+  border: 1px solid  #FAF5BC!important;
 }
 
 .transparent {
@@ -503,7 +507,8 @@ li>.rep {
 }
 
 .abscisse {
-  margin-left: 8%;
+  margin-top: 5%;
+  margin-left: 7%;
   display: flex;
 }
 
