insertion de three.js

--- a/JeuMVC Structure/assets/css/scrumble.css
+++ b/JeuMVC Structure/assets/css/scrumble.css
@@ -291,12 +291,12 @@ div>p {
   margin-right: 5%;
 }
 
-.rectangle {
+.rectangle,.rectangle1,.rectangle2,.rectangle3,.rectangle4,.rectangle5 {
   height: 10em;
   width: 2.5em;
   background-color: black;
   margin-left: 25%;
-  margin-top: 42%;
+  margin-top: 50%;
   display: flex;
   flex-direction: column;
   text-align: center;
@@ -304,28 +304,43 @@ div>p {
 }
 
 .rectangle > span {
-  padding-top: 25%;
- 
+  padding-top: 0%;
+  margin-top:20%;
+}
+.rectangle2 > span {
+  padding-top: 0%;
   margin-top:33%;
+}
+.rectangle3 > span {
+  padding-top: 10%;
+  margin-top:45%;
+}
+.rectangle4 > span {
+  padding-top: 66%;
+  margin-top:20%;
+}
+.rectangle5 > span {
+  padding-top: 50%;
+  margin-top:100%;
 }
 
 .rectangleB {
   height: 2.5em;
-  width: 20em;
+  width: 8em;
   background-color: black;
-  margin-left: 5%;
+  margin-left: 66px;
   text-align: center;
   padding-top: 2%;
-  margin-right:4%;
+  margin-right:5px;
 
 }
-
+/* 
 .rectangle>span {
   margin-top: 10%;
   width: 2.5em;
   color: white;
   font-weight: bolder;
-}
+} */
 
 #container {
   display: flex;
@@ -419,10 +434,10 @@ div>p {
   cursor: pointer;
 }
 
-.position {
+.misenforme {
   margin-left: 25%;
   margin-top: 0%;
-  margin-bottom: 3%;
+  margin-bottom: 5%;
 }
 
 li {
@@ -447,16 +462,22 @@ li>.rep {
 
 .forme {
   margin:0%;
-  width: 12em;
+  width: 11.5em;
   height: 19%;
   background-color: #FAF5BC;
   padding: 5px;
-  border: none;
+  border: 5px solid  #475158!important;
   box-shadow: none;
+  transition: 0,5s;
 }
-.content{
+.forme .drag{
+  transition: 0s;
+  opacity:0.5;
+  z-index:10000;
+}
+/* .content{
   border: 1px solid  #FAF5BC!important;
-}
+} */
 
 .transparent {
   background-color: transparent;
@@ -504,11 +525,12 @@ li>.rep {
 .ordonnee {
   width: 10%;
   margin-left: 2%;
+  margin-bottom:40px;
 }
 
 .abscisse {
   margin-top: 5%;
-  margin-left: 7%;
+ margin-left:10%;
   display: flex;
 }
 
