--- a/JeuMVC Structure/assets/css/etape3.css
+++ b/JeuMVC Structure/assets/css/etape3.css
@@ -1,22 +1,45 @@
-/* .span5{
-padding-top:0%;
-} */
-/* .span4{
-    padding-top: 5%;
-} */
-h3{ color:black;}
-.forme>p{ color:black;}
+h3 {
+    color: black;
+    font-size: 1em;
+    margin-top: 10%;
+    text-align: center;
+}
 
-.span3{
-    padding-top:10em;
+.forme>p {
+    color: black;
+    font-size: 0.90em;
+    text-align: center;
 }
-.span4{
-    padding-top:50%;
+
+.croix {
+    margin-left: 90%;
+    margin-top: 10%;
+    color: black;
+    font-size: 2em;
 }
-.span5{
+.repartition > p{
+    color: black;
+    font-size: 0.9em;
+    font-weight: bolder;
   
+    
+    
+}
+
+
+.span3 {
+    padding-top: 10em;
+}
+
+.span4 {
+    padding-top: 50%;
+}
+
+.span5 {
+
     vertical-align: middle;
 }
-.position{
+
+.position {
     position: absolute;
 }
