--- a/Jeu/css/scrumble.css
+++ b/Jeu/css/scrumble.css
@@ -1,13 +1,23 @@
 body {
   background-color: #2B2D31;
-  /* background-image: url("../img/Scrumble_plateau.png"); 
-  background-size: unset ;  */
   color: white;
   font-family: 'Raleway';
-  /* font-size: 22px; */
-}
-section{margin-top: 2%;}
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  overflow-x: hidden;
 
+}
+
+header,
+section {
+  margin-top: 0%;
+}
+
+a:link 
+{ 
+ text-decoration:none; 
+} 
 footer {
   position: fixed;
   left: 0;
@@ -18,36 +28,63 @@ footer {
   text-align: left;
   /* font-size: 2em; */
   margin-top: 5%;
+  display:flex;
+  font-size:0.75em;
 }
 
 .cercle {
   width: 1.4em;
   height: 1.4em;
   border-radius: 0.8em;
-  background:#A9FF00;
+  background: #A9FF00;
   margin-left: 0;
   margin-right: 3%;
 }
 
 .cadre {
   background-color: #475158;
-  width: 57%;
+  width: 60%;
   height: 40em;
-  margin-top: -2%;
+  margin-top: 2%;
   margin-left: 20%;
   border-radius: 25px;
+}
+
+.cadreconnexion {
+  margin-top: 2.5%;
+  height: 37em;
+  margin-bottom: 3%;
+}
+.repartition{
+  display: flex;
+  flex-direction: row;
 }
 
 section>h1 {
   text-align: center;
   font-size: 2em;
+  margin-top: 2%;
+  padding-top: 0%;
+
 }
 
 section>h2 {
   text-align: center;
-  font-size:1.3em
-
+  font-size: 1.3em;
+  margin-bottom: 2%;
 }
+
+article {
+  display: flex;
+  flex-direction: row;
+  width: 85%;
+  margin-top: 5%;
+  margin-left: 8%;
+  margin-right: 5%;
+  border: 1px solid black;
+  height: 38em;
+}
+
 div>h1 {
   text-align: center;
   font-size: 2em;
@@ -55,13 +92,12 @@ div>h1 {
   padding-top: 2%;
   margin-bottom: 7.5%;
 }
-form>div {
-  display: flex;
-  flex-direction: row;
-  margin-right: 15%;
-  margin-left: -25%;
-  width: 75%;
+
+h3 {
+  margin-top: 10%;
+  font-size: 0.9em;
 }
+
 
 input[type=number],
 input[type=password],
@@ -77,21 +113,12 @@ input[type=text] {
   margin-bottom: 2%;
 }
 
-select {
-  width: 74%;
-  padding: 16px 20px;
-  border: none;
-  border-radius: 4px;
-  background-color: white;
-  margin-right: 20%;
-  margin-top: 25%;
-}
 
 input[type=submit] {
   width: 33%;
   background-color: #4CAF50;
   color: white;
-  padding: 14px 20px;
+  padding: 14px 25px;
   margin-top: 5%;
   margin-left: 5%;
   border: none;
@@ -109,11 +136,44 @@ input[type=reset] {
   border: none;
   border-radius: 12px;
   cursor: pointer;
+  margin-right: 5%;
 }
 
 form>div {
-  margin-left: 20%;
+  margin-left: 0%;
   margin-top: 1%
+}
+
+form>select {
+  margin-left: 20%;
+  margin-top: 5%;
+  margin-right: 5%;
+}
+
+select {
+  width: 55%;
+  padding: 16px 20px;
+  border: none;
+  border-radius: 4px;
+  background-color: white;
+  margin-right: 20%;
+  margin-top: 25%;
+
+}
+
+.inputtext {
+  margin-left: 0%;
+  margin-right: 10%;
+  width: 66%;
+  padding: 5px 25px;
+  font-size: 2em;
+}
+
+.select {
+  padding: 5px 25px;
+  width: 100%;
+  height: 3.2em;
+  margin-top: 5%;
 }
 
 .cadreregles {
@@ -128,9 +188,17 @@ form>div {
 
 }
 
+.lienformulaire {
+  border-radius: 20px;
+  margin-left: 30%;
+  background-color: #40C834;
+  padding: 25px 55px;
+  margin-bottom: 2%;
+}
+
 ::-webkit-scrollbar {
   width: 1em;
-  height:10em;
+  height: 10em;
   margin-right: 1%;
 }
 
@@ -205,23 +273,24 @@ div>p {
 }
 
 .rectangle {
-  height:7.5em;
+  height: 7.5em;
   width: 2.5em;
   background-color: black;
   margin-left: 2%;
-  margin-top:5% ;
-  
+  margin-top: 5%;
+
 }
+
 .rectangleB {
   height: 2.5em;
   width: 6em;
   background-color: black;
   margin-left: 7.5%;
-  margin-top:5% ;
+  margin-top: 5%;
 }
 
-.rectangle > span{
-  margin-top:10%;
+.rectangle>span {
+  margin-top: 10%;
   width: 2.5em;
   color: white;
   font-weight: bolder;
@@ -234,15 +303,15 @@ div>p {
 
 .box {
   width: 16em;
-  height: 15em;
+  /* height: 20em; */
   background-color: #FAF5BC;
   margin-left: 1%;
-  margin-right: 3%;
+  margin-right: 0.5%;
   margin-bottom: 3%;
 }
 
 .case {
-  width:80%;
+  width: 80%;
   height: 2em;
   text-align: center;
   background-color: black;
@@ -257,10 +326,10 @@ div>p {
 .next {
   cursor: pointer;
   position: absolute;
-  top: 15%;
+  top: 33%;
   width: auto;
   padding: 16px;
-  margin-top:2%;
+  margin-top: 2%;
   color: white;
   font-weight: bold;
   font-size: 2em;
@@ -275,7 +344,7 @@ div>p {
   right: 0;
   border-radius: 3px 0 0 3px;
 }
-.cadrespecial{
+
+.cadrespecial {
   background-color: #475158;
 }
-
