--- a/JeuMVC Structure/assets/css/jeu.css
+++ b/JeuMVC Structure/assets/css/jeu.css
@@ -34,7 +34,7 @@ article{
 .pistede{
     height:20vw;
     width:75%;
-    margin-left: 10%;
+    margin-left: 7.5%;
     border:  black 5px solid;
     border-radius: 50px;
     background-color: #313439;
@@ -214,5 +214,6 @@ article{
 
 #chartdiv {
     width: 100%;
-    height: 10em;
+    height: 100%;
+   
   }
