--- a/Jeu/public/views/jeu.html
+++ b/Jeu/public/views/jeu.html
@@ -19,8 +19,9 @@
     <a class="prev posfleche"  href="/etape4" data-link="/etape4">&#10094;</a>
 
     <div id="titreJeu">
-        <h2> C'est le tour du joueur N°2</h2>
-        <p>Tirez le dé</p>
+        <h2> Bravo!!! vous etes  <span id="nmbredejoeur"> 0 </span> joeurs/joeuses à pouvoir tirer les dés en même temps </h2>
+        <p> <span id="nameJoeur"> </span> Tirez votre dé</p>
+        <span id="resultTirage"></span>
     </div>
 
     <section class="cadreCentrale">
@@ -35,8 +36,8 @@
         </section>
         <section class="cadreDroite">
 
-            <article class="pistede dice">
-                <ol class="die-list even-roll" data-roll="1" id="die-1">
+            <article class="pistede dice" id="ref">
+                <!-- <ol class="die-list even-roll" data-roll="1" id="die-1">
                     <li class="die-item" data-side="1">
                         <span class="dot"></span>
                     </li>
@@ -70,7 +71,7 @@
                         <span class="dot"></span>
                         <span class="dot"></span>
                     </li>
-                </ol>
+                </ol> -->
 
             </article>
 
