--- a/Jeu/public/views/jeu.html
+++ b/Jeu/public/views/jeu.html
@@ -21,7 +21,7 @@
     <div id="titreJeu">
         <h2> Bravo!!! vous etes  <span id="nmbredejoeur"> 0 </span> joeurs/joeuses à pouvoir tirer les dés en même temps </h2>
         <p> <span id="nameJoeur"> </span> Tirez votre dé</p>
-        <span id="resultTirage"></span>
+        <span id="resultatTirage"></span>
     </div>
 
     <section class="cadreCentrale">
