push du 25/06/2021 ajout du click sur plateau plus resultat des des sur page

--- a/Jeu/public/views/jeu.html
+++ b/Jeu/public/views/jeu.html
@@ -20,7 +20,8 @@
 
     <div id="titreJeu">
         <h2> Bravo!!! vous etes <span id="nmbredejoeur"> 0 </span> joeurs/joeuses à pouvoir tirer les dés en même temps </h2>
-        <p> <span id="nameJoeur"> </span> Tirez votre dé</p>
+        <p> <span id="nameJoeur">
+        </span> Tirez votre dé</p>
         <span id="resultatTirage"></span>
     </div>
 
