--- a/Jeu/public/assets/css/jeu.css
+++ b/Jeu/public/assets/css/jeu.css
@@ -69,7 +69,7 @@ article{
     transition: transform 1.25s ease-out;
   }
   .die-item {
-     background-color: red; 
+     background-color: white; 
     box-shadow: inset -0.35rem 0.35rem 0.75rem rgba(0, 0, 0, 0.3),
       inset 0.5rem -0.25rem 0.5rem rgba(0, 0, 0, 0.15);
     display: grid;
