--- a/Jeu/public/views/jeu.html
+++ b/Jeu/public/views/jeu.html
@@ -21,10 +21,10 @@
     <div id="titreJeu">
         <h2> Bravo!!! vous etes <span id="nmbredejoeur"> 0 </span> joeurs/joeuses à pouvoir tirer les dés en même temps </h2>
         <p> <span id="nameJoeur">
-        </span> Tirez votre dé</p>
+        <br> </span> Tirez votre dé</p>
         <span id="resultatTirage"></span>
     </div>
-
+<br><br><br>
     <section class="cadreCentrale">
         <section class="cadreGauche">
             <article class="cadrejeu">
