--- a/Jeu/public/views/jeu.html
+++ b/Jeu/public/views/jeu.html
@@ -11,20 +11,21 @@
     <link rel="stylesheet" href="../assets/css/scrumble.css">
     <link rel="stylesheet" href="../assets/css/jeu.css">
     <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
-   
+
 </head>
 
 <body>
 
-    <a class="prev posfleche"  href="/etape4" data-link="/etape4">&#10094;</a>
+    <a class="prev posfleche" href="/etape4" data-link="/etape4">&#10094;</a>
 
     <div id="titreJeu">
-        <h2> Bravo!!! vous etes <span id="nmbredejoeur"> 0 </span> joeurs/joeuses à pouvoir tirer les dés en même temps </h2>
+        <h2> Bravo!!! vous etes <span id="nmbredejoeur"> 0 </span> joeurs/joeuses à pouvoir tirer les dés en même temps
+        </h2>
         <p> <span id="nameJoeur">
-        <br> </span> Tirez votre dé</p>
+                <br> </span> Tirez votre dé</p>
         <span id="resultatTirage"></span>
     </div>
-<br><br><br>
+    <br><br><br>
     <section class="cadreCentrale">
         <section class="cadreGauche">
             <article class="cadrejeu">
@@ -36,48 +37,28 @@
             <article></article>
         </section>
         <section class="cadreDroite">
-
+            <!-- <article class="userstorie">
+                <h3>Liste des userstories En cours</h3> <br>
+                <div>----------------------------------------------------</div>
+            </article> -->
             <article class="pistede dice" id="ref">
-                <!-- <ol class="die-list even-roll" data-roll="1" id="die-1">
-                    <li class="die-item" data-side="1">
-                        <span class="dot"></span>
-                    </li>
-                    <li class="die-item" data-side="2">
-                        <span class="dot"></span>
-                        <span class="dot"></span>
-                    </li>
-                    <li class="die-item" data-side="3">
-                        <span class="dot"></span>
-                        <span class="dot"></span>
-                        <span class="dot"></span>
-                    </li>
-                    <li class="die-item" data-side="4">
-                        <span class="dot"></span>
-                        <span class="dot"></span>
-                        <span class="dot"></span>
-                        <span class="dot"></span>
-                    </li>
-                    <li class="die-item" data-side="5">
-                        <span class="dot"></span>
-                        <span class="dot"></span>
-                        <span class="dot"></span>
-                        <span class="dot"></span>
-                        <span class="dot"></span>
-                    </li>
-                    <li class="die-item" data-side="6">
-                        <span class="dot"></span>
-                        <span class="dot"></span>
-                        <span class="dot"></span>
-                        <span class="dot"></span>
-                        <span class="dot"></span>
-                        <span class="dot"></span>
-                    </li>
-                </ol> -->
-
             </article>
-
-            <article></article>
-            <article></article>
+            <div> <h2> DayliCard</h2>
+                <article class="pistecard">
+                    <div class="maincontainer">
+                        <div class="thecard" id="carte">
+                            <div class="front"></div>
+                            <div class="back">
+                                <h3> Titre1</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim rem expedita, officia, eum corporis suscipit nemo optio iure nam voluptate, quisquam accusamus nesciunt amet illum veniam assumenda eos possimus laborum!</p>
+                                <p class="croix" id="interet">+</p>
+                            </div>
+                        </div>
+                    </div>
+                   
+                </article>
+                <article class="pistecard"></article>
+            </div>
         </section>
 
     </section>
