--- a/Jeu/public/assets/css/jeu.css
+++ b/Jeu/public/assets/css/jeu.css
@@ -1,35 +1,47 @@
-h2{
-    text-align: center;
-    margin-top: 2%;
+body{margin-bottom: 5%;}
+h2,h3 {
+  text-align: center;
+  margin-top: 2%;
 }
-#titreJeu > p{
-    text-align: center; 
+
+.userstorie>div{
+  color: black;
 }
-#resultatTirage{
- margin-left: 45%; 
+#titreJeu>p {
+  text-align: center;
 }
-.posfleche{
-    margin-top: 1%;
+
+#resultatTirage {
+  margin-left: 45%;
 }
-.cadreCentrale{
-    display:flex;
-    flex-direction: row;
+
+.posfleche {
+  margin-top: 1%;
 }
-.cadreGauche{
-    width: 55%;
-    display: flex;
-    flex-direction: column;
-}
-.cadreDroite{
-    width:44%;
-    display: flex;
-    flex-direction: column;  
-}
-.repartition{
+
+.cadreCentrale {
   display: flex;
-    flex-direction: row; 
-    margin-left: 33%;
+  flex-direction: row;
 }
+
+.cadreGauche {
+  width: 55%;
+  display: flex;
+  flex-direction: column;
+}
+
+.cadreDroite {
+  width: 44%;
+  display: flex;
+  flex-direction: column;
+}
+
+.repartition {
+  display: flex;
+  flex-direction: row;
+  margin-left: 33%;
+}
+
 .cercles {
   width: 1.5em;
   height: 1.5em;
@@ -38,205 +50,324 @@ h2{
   margin-right: 3%;
   margin-top: 1%;
 }
-article{
-    height:20vw;
-    margin-top: 2%;
-    border-radius: none;
+
+article {
+  height: 20vw;
+  margin-top: 0%;
+  border-radius: none;
 }
-.cadrejeu{
-    height: 50vw;
+.cadreDroite>div{
+  margin-top: -22%;
 }
-.pistede{
-    height:35vw;
-    width:100%;
-    margin-left: 10%;
-    border:  black 5px solid;
-    border-radius: 50px;
-    background-color: #313439;
+/* creation des cartes */
+.pistecard{
+  height: 20vw;
+  width: 56%;
+  /* margin-left: -0%; */
+  border: black 2px solid;
+  border-radius: 50px;
+  background-color: #313439;
+  margin-top: 2%;
+ 
 }
+
+.maincontainer{
+  position:relative;
+  width: 50%;
+  height:90%;
+  background: none;
+  margin: 5%;
+}
+.thecard{
+  position:absolute;
+  width:100%;
+  height:100%;
+  transform-style: preserve-3d;
+  transition:all 0.5s ease;
+  background: transparent;
+  border-radius:10px ;
+ 
+}
+.active{
+transform: rotateY(180deg) ;
+}
+.front{
+  position:absolute;
+  border: 1px solid white; 
+  width:100%;
+  height: 100%;
+  backface-visibility: hidden;
+  background-color:blue;
+  color: white;border-radius:10px ;
+}
+.back{
+position:absolute;
+border: 1px solid white;
+width:100%;
+height: 100%;
+backface-visibility: hidden;
+background-color:white;
+transform: rotateY(180deg);border-radius:10px ;
+}
+.back >h3,.back>p{
+  color: black;
+  text-align: center;
+  font-size: 1em;
+
+}
+
+
+.userstorie {
+  width: 53%;
+  margin-left: 12%;
+  display: flex;
+  flex-direction: column;
+}
+
+/* partie contenu du jeu */
+.cadrejeu {
+  height: 50vw;
+}
+
+.pistede {
+  height: 35vw;
+  width: 100%;
+  margin-left: -17%;
+  border: black 5px solid;
+  border-radius: 50px;
+  background-color: #313439;
+  margin-top: -25%;
+}
+
 /* création du dé */
 .dice {
-    align-items: center;
-    display: grid;
-    grid-gap: 2rem;
-    grid-template-columns: repeat(auto-fit, minmax(8rem, 1fr));
-    grid-template-rows: auto;
-    justify-items: center;
-    padding: 2rem;
-    perspective: 8000px; transform: scale(0.5);
-  }
-  .die-list {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr;
-    height: 3rem;
-    list-style-type: none;
-    transform-style: preserve-3d;
-    width: 3rem;
-    transform: scale(0.5);
-  }
-  .even-roll {
-    transition: transform 1.5s ease-out;
-  }
-  .odd-roll {
-    transition: transform 1.25s ease-out;
-  }
-  .die-item {
-     /* background-color: pink;  */
-    box-shadow: inset -0.35rem 0.35rem 0.75rem rgba(0, 0, 0, 0.3),
-      inset 0.5rem -0.25rem 0.5rem rgba(0, 0, 0, 0.15);
-    display: grid;
-    grid-column: 1;
-    grid-row: 1;
-    grid-template-areas:
-      "one two three"
-      "four five six"
-      "seven eight nine";
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    height: 100%;
-    padding: 1rem;
-    width: 100%;
-    
-  }
-  .dot {
-    align-self: center;
-    background-color: #676767;
-    border-radius: 50%;
-    box-shadow: inset -0.15rem 0.15rem 0.25rem rgba(0, 0, 0, 0.5);
-    display: block;
-    height: 1.25rem;
-    justify-self: center;
-    width: 1.25rem;
-  }
-  .even-roll[data-roll="1"] {
-    transform: rotateX(360deg) rotateY(720deg) rotateZ(360deg);
-  }
-  .even-roll[data-roll="2"] {
-    transform: rotateX(450deg) rotateY(720deg) rotateZ(360deg);
-  }
-  .even-roll[data-roll="3"] {
-    transform: rotateX(360deg) rotateY(630deg) rotateZ(360deg);
-  }
-  .even-roll[data-roll="4"] {
-    transform: rotateX(360deg) rotateY(810deg) rotateZ(360deg);
-  }
-  .even-roll[data-roll="5"] {
-    transform: rotateX(270deg) rotateY(720deg) rotateZ(360deg);
-  }
-  .even-roll[data-roll="6"] {
-    transform: rotateX(360deg) rotateY(900deg) rotateZ(360deg);
-  }
-  .odd-roll[data-roll="1"] {
-    transform: rotateX(-360deg) rotateY(-720deg) rotateZ(-360deg);
-  }
-  .odd-roll[data-roll="2"] {
-    transform: rotateX(-270deg) rotateY(-720deg) rotateZ(-360deg);
-  }
-  .odd-roll[data-roll="3"] {
-    transform: rotateX(-360deg) rotateY(-810deg) rotateZ(-360deg);
-  }
-  .odd-roll[data-roll="4"] {
-    transform: rotateX(-360deg) rotateY(-630deg) rotateZ(-360deg);
-  }
-  .odd-roll[data-roll="5"] {
-    transform: rotateX(-450deg) rotateY(-720deg) rotateZ(-360deg);
-  }
-  .odd-roll[data-roll="6"] {
-    transform: rotateX(-360deg) rotateY(-900deg) rotateZ(-360deg);
-  }
-  [data-side="1"] {
-    transform: rotate3d(0, 0, 0, 90deg) translateZ(4rem);
-  }
-  [data-side="2"] {
-    transform: rotate3d(-1, 0, 0, 90deg) translateZ(4rem);
-  }
-  [data-side="3"] {
-    transform: rotate3d(0, 1, 0, 90deg) translateZ(4rem);
-  }
-  [data-side="4"] {
-    transform: rotate3d(0, -1, 0, 90deg) translateZ(4rem);
-  }
-  [data-side="5"] {
-    transform: rotate3d(1, 0, 0, 90deg) translateZ(4rem);
-  }
-  [data-side="6"] {
-    transform: rotate3d(1, 0, 0, 180deg) translateZ(4rem);
-  }
-  [data-side="1"] .dot:nth-of-type(1) {
-    grid-area: five;
-  }
-  [data-side="2"] .dot:nth-of-type(1) {
-    grid-area: one;
-  }
-  [data-side="2"] .dot:nth-of-type(2) {
-    grid-area: nine;
-  }
-  [data-side="3"] .dot:nth-of-type(1) {
-    grid-area: one;
-  }
-  [data-side="3"] .dot:nth-of-type(2) {
-    grid-area: five;
-  }
-  [data-side="3"] .dot:nth-of-type(3) {
-    grid-area: nine;
-  }
-  [data-side="4"] .dot:nth-of-type(1) {
-    grid-area: one;
-  }
-  [data-side="4"] .dot:nth-of-type(2) {
-    grid-area: three;
-  }
-  [data-side="4"] .dot:nth-of-type(3) {
-    grid-area: seven;
-  }
-  [data-side="4"] .dot:nth-of-type(4) {
-    grid-area: nine;
-  }
-  [data-side="5"] .dot:nth-of-type(1) {
-    grid-area: one;
-  }
-  [data-side="5"] .dot:nth-of-type(2) {
-    grid-area: three;
-  }
-  [data-side="5"] .dot:nth-of-type(3) {
-    grid-area: five;
-  }
-  [data-side="5"] .dot:nth-of-type(4) {
-    grid-area: seven;
-  }
-  [data-side="5"] .dot:nth-of-type(5) {
-    grid-area: nine;
-  }            
-  [data-side="6"] .dot:nth-of-type(2) {
-    grid-area: three;
-  }
-  [data-side="6"] .dot:nth-of-type(3) {
-    grid-area: four;
-  }
-  [data-side="6"] .dot:nth-of-type(4) {
-    grid-area: six;
-  }
-  [data-side="6"] .dot:nth-of-type(5) {
-    grid-area: seven;
-  }
-  [data-side="6"] .dot:nth-of-type(6) {
-    grid-area: nine;
-  }
-  
+  align-items: center;
+  display: grid;
+  grid-gap: 2rem;
+  grid-template-columns: repeat(auto-fit, minmax(8rem, 1fr));
+  grid-template-rows: auto;
+  justify-items: center;
+  padding: 2rem;
+  perspective: 8000px;
+  transform: scale(0.5);
+}
+
+.die-list {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+  height: 3rem;
+  list-style-type: none;
+  transform-style: preserve-3d;
+  width: 3rem;
+  transform: scale(0.5);
+}
+
+.even-roll {
+  transition: transform 1.5s ease-out;
+}
+
+.odd-roll {
+  transition: transform 1.25s ease-out;
+}
+
+.die-item {
+  /* background-color: pink;  */
+  box-shadow: inset -0.35rem 0.35rem 0.75rem rgba(0, 0, 0, 0.3),
+    inset 0.5rem -0.25rem 0.5rem rgba(0, 0, 0, 0.15);
+  display: grid;
+  grid-column: 1;
+  grid-row: 1;
+  grid-template-areas:
+    "one two three"
+    "four five six"
+    "seven eight nine";
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  height: 100%;
+  padding: 1rem;
+  width: 100%;
+
+}
+
+.dot {
+  align-self: center;
+  background-color: #676767;
+  border-radius: 50%;
+  box-shadow: inset -0.15rem 0.15rem 0.25rem rgba(0, 0, 0, 0.5);
+  display: block;
+  height: 1.25rem;
+  justify-self: center;
+  width: 1.25rem;
+}
+
+.even-roll[data-roll="1"] {
+  transform: rotateX(360deg) rotateY(720deg) rotateZ(360deg);
+}
+
+.even-roll[data-roll="2"] {
+  transform: rotateX(450deg) rotateY(720deg) rotateZ(360deg);
+}
+
+.even-roll[data-roll="3"] {
+  transform: rotateX(360deg) rotateY(630deg) rotateZ(360deg);
+}
+
+.even-roll[data-roll="4"] {
+  transform: rotateX(360deg) rotateY(810deg) rotateZ(360deg);
+}
+
+.even-roll[data-roll="5"] {
+  transform: rotateX(270deg) rotateY(720deg) rotateZ(360deg);
+}
+
+.even-roll[data-roll="6"] {
+  transform: rotateX(360deg) rotateY(900deg) rotateZ(360deg);
+}
+
+.odd-roll[data-roll="1"] {
+  transform: rotateX(-360deg) rotateY(-720deg) rotateZ(-360deg);
+}
+
+.odd-roll[data-roll="2"] {
+  transform: rotateX(-270deg) rotateY(-720deg) rotateZ(-360deg);
+}
+
+.odd-roll[data-roll="3"] {
+  transform: rotateX(-360deg) rotateY(-810deg) rotateZ(-360deg);
+}
+
+.odd-roll[data-roll="4"] {
+  transform: rotateX(-360deg) rotateY(-630deg) rotateZ(-360deg);
+}
+
+.odd-roll[data-roll="5"] {
+  transform: rotateX(-450deg) rotateY(-720deg) rotateZ(-360deg);
+}
+
+.odd-roll[data-roll="6"] {
+  transform: rotateX(-360deg) rotateY(-900deg) rotateZ(-360deg);
+}
+
+[data-side="1"] {
+  transform: rotate3d(0, 0, 0, 90deg) translateZ(4rem);
+}
+
+[data-side="2"] {
+  transform: rotate3d(-1, 0, 0, 90deg) translateZ(4rem);
+}
+
+[data-side="3"] {
+  transform: rotate3d(0, 1, 0, 90deg) translateZ(4rem);
+}
+
+[data-side="4"] {
+  transform: rotate3d(0, -1, 0, 90deg) translateZ(4rem);
+}
+
+[data-side="5"] {
+  transform: rotate3d(1, 0, 0, 90deg) translateZ(4rem);
+}
+
+[data-side="6"] {
+  transform: rotate3d(1, 0, 0, 180deg) translateZ(4rem);
+}
+
+[data-side="1"] .dot:nth-of-type(1) {
+  grid-area: five;
+}
+
+[data-side="2"] .dot:nth-of-type(1) {
+  grid-area: one;
+}
+
+[data-side="2"] .dot:nth-of-type(2) {
+  grid-area: nine;
+}
+
+[data-side="3"] .dot:nth-of-type(1) {
+  grid-area: one;
+}
+
+[data-side="3"] .dot:nth-of-type(2) {
+  grid-area: five;
+}
+
+[data-side="3"] .dot:nth-of-type(3) {
+  grid-area: nine;
+}
+
+[data-side="4"] .dot:nth-of-type(1) {
+  grid-area: one;
+}
+
+[data-side="4"] .dot:nth-of-type(2) {
+  grid-area: three;
+}
+
+[data-side="4"] .dot:nth-of-type(3) {
+  grid-area: seven;
+}
+
+[data-side="4"] .dot:nth-of-type(4) {
+  grid-area: nine;
+}
+
+[data-side="5"] .dot:nth-of-type(1) {
+  grid-area: one;
+}
+
+[data-side="5"] .dot:nth-of-type(2) {
+  grid-area: three;
+}
+
+[data-side="5"] .dot:nth-of-type(3) {
+  grid-area: five;
+}
+
+[data-side="5"] .dot:nth-of-type(4) {
+  grid-area: seven;
+}
+
+[data-side="5"] .dot:nth-of-type(5) {
+  grid-area: nine;
+}
+
+[data-side="6"] .dot:nth-of-type(2) {
+  grid-area: three;
+}
+
+[data-side="6"] .dot:nth-of-type(3) {
+  grid-area: four;
+}
+
+[data-side="6"] .dot:nth-of-type(4) {
+  grid-area: six;
+}
+
+[data-side="6"] .dot:nth-of-type(5) {
+  grid-area: seven;
+}
+
+[data-side="6"] .dot:nth-of-type(6) {
+  grid-area: nine;
+}
+
 
 
 #chartdiv {
-  margin-top:-8.5%;
-    width: 100%;
-    height: 100%;
-    border: none;
-     transform: /*rotate(180deg)*/ scale(1.25); 
-  }
+  margin-top: -8.5%;
+  width: 100%;
+  height: 100%;
+  border: none;
+  transform:
+    /*rotate(180deg)*/
+    scale(1.25);
+}
 
-  .die-overlay {
-    box-sizing: border-box;
-    width: 5rem;
-    height: 5rem;
-    z-index: 100000;
-  }
+.die-overlay {
+  box-sizing: border-box;
+  width: 5rem;
+  height: 5rem;
+  z-index: 100000;
+}
