--- a/Jeu/public/views/jeu.html
+++ b/Jeu/public/views/jeu.html
@@ -24,7 +24,7 @@
         <p> <span id="nameJoeur">
                 <br> </span> Tirez votre dé</p>
         <span id="resultatTirage"></span>
-    </div>
+        </div>
     <br><br><br>
     <section class="cadreCentrale">
         <section class="cadreGauche">
@@ -43,22 +43,25 @@
             </article> -->
             <article class="pistede dice" id="ref">
             </article>
-            <div> <h2> DayliCard</h2>
+            <p id="bloc1"> <h2> DayliCard <span> validez votre lecture en cliquant sur la croix en bas de carte </span></h2>
                 <article class="pistecard">
                     <div class="maincontainer">
                         <div class="thecard" id="carte">
                             <div class="front"></div>
                             <div class="back">
                                 <h3> Titre1</h3>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim rem expedita, officia, eum corporis suscipit nemo optio iure nam voluptate, quisquam accusamus nesciunt amet illum veniam assumenda eos possimus laborum!</p>
-                                <p class="croix" id="interet">+</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim rem expedita, officia,
+                                    eum corporis suscipit nemo optio iure nam voluptate, quisquam accusamus nesciunt
+                                    amet illum veniam assumenda eos possimus laborum!</p>
+                                <p class="croix" id="interet"> +</p>
                             </div>
                         </div>
                     </div>
-                   
+
                 </article>
+                <h2> RevueCard <span>validez votre lecture en cliquant sur la croix en bas de carte</span></h2>
                 <article class="pistecard"></article>
-            </div>
+            </p>
         </section>
 
     </section>
